kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://cluster-schemas.smbonn.me/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Flux Stats
    gethomepage.dev/description: Flux Reconciliation Checker
spec:
  hostnames:
    - flux-operator.smbonn.me
  parentRefs:
    - name: envoy-internal
      namespace: networking
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
